[package]
name = "DLLMemoryHack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dll_memhack"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build]
target = "i686-pc-windows-msvc"

[dependencies]
user32-sys = "0.2.0"
winapi = {version = "0.3.9", features = ["winuser"]}
