[package]
name = "DLLMemoryHack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dll_memhack"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "dll_injector"
path = "src/main.rs"

[build]
target = "i686-pc-windows-msvc"

[run]
target = "i686-pc-windows-msvc"

[dependencies]
inject-lib = "0.3.2"
user32-sys = "0.2.0"
winapi = {version = "0.3.9", features = ["winuser", "processthreadsapi"]}
